# agent-vcr

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SCALING.md  TUTORIAL.md  TYPESCRIPT_IMPLEMENTATION.md
.github/workflows/: publish-npm.yml  publish-python.yml  tests.yml
content/: blog-post-medium-devto.md  linkedin-article.md  linkedin-post.md  medium-cover-image.html  reddit-posts.md  twitter-thread.md
demo/: README-GIFS.md  README.md  agent-vcr-demo.cast  make-lab-gifs.sh  record-correlation-demo.sh  record-demo.sh
demo/servers/: calculator_v1.py  calculator_v2.py
docs/: README.md  architecture.md  publishing.md  release.md  scaling.md  tutorial.md  typescript-implementation.md
examples/python/: README.md  create_sample_recording.py  diff_recordings.py  replay_recording.py
examples/recordings/: calculator-errors.vcr  calculator-v1.vcr  calculator-v2.vcr
python/: README.md  pyproject.toml
python/src/agent_vcr/: __init__.py  cli.py  diff.py  indexer.py  project.py  pytest_plugin.py  recorder.py  replayer.py
python/src/agent_vcr/core/: __init__.py  format.py  matcher.py  session.py
python/src/agent_vcr/transport/: __init__.py  base.py  sse.py  stdio.py
python/tests/: __init__.py  conftest.py  test_bugfixes.py  test_cli_index_commands.py  test_diff.py  test_format.py  test_indexer.py  test_matcher.py  test_new_cli_commands.py  test_new_diff_features.py  test_new_matcher_features.py  test_new_replayer_features.py  test_recorder.py  test_replayer.py  test_session.py
typescript/: .eslintrc.json  .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts
(+23 files in other folders)
