[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-vcr"
version = "0.1.0"
description = "Record, replay, and diff MCP (Model Context Protocol) interactions — like VCR for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pramod Voola", email = "pramod.voola@icloud.com" },
]
keywords = ["mcp", "testing", "recording", "replay", "ai-agents", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "rich>=13.0",
    "deepdiff>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
agent-vcr = "agent_vcr.cli:main"

[project.entry-points.pytest11]
agent_vcr = "agent_vcr.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_vcr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
